# stash.it

./: Cargo.toml
crates/governance/: Cargo.toml
crates/governance/src/application/policy/: command.rs  mod.rs
crates/governance/src/domain/: events.rs  mod.rs  repositories.rs
crates/governance/src/domain/policy/: action.rs  intent.rs  mod.rs  policy.rs  predicate.rs  rule.rs  trigger.rs
crates/macros/: Cargo.toml
crates/macros/src/: di.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/domain/: entity.rs  mod.rs
crates/shared/src/domain/events/: user.rs
crates/shared/src/domain/value_objects/: asset.rs  date.rs  mod.rs  mula.rs  pid.rs  user_status.rs  wallet_address.rs
crates/shared/src/infrastructure/: config.rs  env.rs  mod.rs
crates/shared/src/infrastructure/mailing/: mod.rs  stub_mailer.rs
crates/shared/src/infrastructure/messaging/: event.rs  memory.rs  mod.rs
crates/shared/src/infrastructure/types/: error.rs  mod.rs
crates/shared/src/testing/: insta_filters.rs  mod.rs
crates/stash/: Cargo.toml
crates/stash/src/application/: mod.rs
crates/stash/src/application/ledger/: command.rs  mod.rs
crates/stash/src/application/stash/: command.rs  mod.rs
crates/stash/src/domain/: events.rs  mod.rs  repositories.rs
crates/stash/src/domain/ledger_entry/: entry.rs  entry_type.rs  mod.rs
crates/stash/src/domain/stash/: balance.rs  mod.rs  name.rs  stash.rs  status.rs  tag.rs
crates/stash/src/infra/events/: mod.rs  register.rs  user_status_updated.rs
crates/stash/src/infra/persistence/: mod.rs
crates/stash/tests/: ledger.rs  stash.rs
crates/stash/tests/snapshots/: can_create_stash@create_stash.snap  can_write_ledger_entry@write_entry.snap
crates/stash/tests/utils/: bootstrap.rs  mod.rs  prepare.rs  repositories.rs
crates/user/: Cargo.toml
crates/user/config/: test.yaml
crates/user/src/: lib.rs
crates/user/src/application/: auth.rs  authentication.rs  mailing.rs  mod.rs  session.rs  session_management.rs  user_management.rs
crates/user/src/application/user/: command.rs  mod.rs
crates/user/src/application/user_management/: mod.rs
crates/user/src/domain/: events.rs  repositories.rs
crates/user/src/domain/aggregates/: user.rs
crates/user/src/domain/entities/: profile.rs  session.rs
crates/user/src/domain/value_objects/: display_name.rs  email.rs  mod.rs  otp_code.rs  user_status.rs
crates/user/src/infrastructure/: config.rs
crates/user/src/infrastructure/auth/: jwt_service.rs
crates/user/src/infrastructure/config/: mod.rs
crates/user/src/infrastructure/persistence/: profile_repository.rs  session_repository.rs  user_repository.rs
crates/user/src/services/: authentication.rs  mailing.rs  mod.rs  session_management.rs  user_management.rs
crates/user/tests/: auth.rs  authentication.rs  mod.rs  user.rs
crates/user/tests/common/: bootstrap.rs  macros.rs  mod.rs  prepare.rs  repositories.rs  string_utils.rs
crates/user/tests/snapshots/: can_activate_auth_session@authenticated_user.snap  can_create_user_profile@user_profile.snap
docs/: DDD.spec.md
