[workspace]
resolver = "3"
members = ["crates/shared", "crates/macros"]

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
more-di = { version = "3.1.0", features = ["async"] }
once_cell = "1.21.3"
send_wrapper = "0.6.0"
