[package]
name = "governance"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", features = ["testing"] }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
more-di = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
testing = []