[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
alloy = "1.0.41"
more-di = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }

[features]
testing = []
