[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
macros = { path = "../macros" }
email_address = "0.2.9"
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
more-di = { workspace = true }
once_cell = { workspace = true }
send_wrapper = { workspace = true }
ctor = { workspace = true }
rand = "0.9.2"
thiserror = { workspace = true }
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
derive_builder = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
